# opengl-grid

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: error.h
include/game/: game.h  tick.h
include/graphics/: renderer.h  shader.h  window.h
include/input/: camera.h
include/world/: cube.h
shaders/: default.frag  default.vert
shaders/fragment/: basic.glsl
shaders/vertex/: basic.glsl
src/game/: game.c  tick.c
src/graphics/: renderer.c  shader.c  window.c
src/input/: camera.c
src/world/: cube.c
